# bmp2yuvCover

./: CMakeLists.txt  README.md
include/bitmap/: Bitmap.h  BitmapFileHeader.h  BitmapInfo.h  Param.h  ParamChar.h  ParamLong.h
include/image/: ImageBMP.h  ImageYUV.h
src/: CMakeLists.txt  main.cpp
src/bitmap/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.cpp  BitmapFileHeader.h  BitmapInfo.cpp  BitmapInfo.h  Param.cpp  Param.h  ParamChar.cpp  ParamChar.h  ParamLong.cpp  ParamLong.h
src/image/: ImageBMP.cpp  ImageBMP.h  ImageYUV.cpp  ImageYUV.h
